--- a/src/component/ScrollSlider/ScrollSlider.css
+++ b/src/component/ScrollSlider/ScrollSlider.css
@@ -51,11 +51,15 @@ body {
     .swiper-slide {
         background-position: center;
         background-size: cover;
-        width: 400px;
+        width: 300px;
         height: 550px;
         background-color: white;
         box-shadow: 4px 9px 20px rgba(12, 70, 117,.5);
         border-radius: 20px;
+        margin-top: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
       .swiper {
         width: 100%;
