--- a/src/component/shered/Navebar/Footer.css
+++ b/src/component/shered/Navebar/Footer.css
@@ -1,3 +1,23 @@
 .hoverEffect:hover .setHover{
     color: #D82027;
 }
+
+/* navebar css */
+.border-animate { 
+    display:inline-block;
+    margin:0;
+
+    /* border-bottom: solid 2px rgb(22, 19, 19); */
+    /* text-transform:uppercase;  */
+}
+.border-animate:after {
+  display:block;
+  content: '';
+  border-bottom: solid 1px rgb(22, 19, 19);  
+  transform: scaleX(0);  
+  transition: transform 100ms ease-in-out!important;
+}
+.border-animate:after{ transform-origin: 100% 50%; }
+/* h1.fromRight:after{  transform-origin:   0% 50%; } */
+.border-animate:hover:after{ transform: scaleX(1); transform-origin:   1% 50%; }
+/* h1.fromRight:hover:after{ transform: scaleX(1); transform-origin: 100% 50%; } */
